--- a/Paper_iESPnet_pruebas/01-Exploraciones/07 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01-Exploraciones/07 Exploracion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "s      = 0\n",
     "nepoch = 1\n",
-    "nfile  = 2"
+    "nfile  = 23"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PIT-RNS8973'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RNSIDS[23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -128,12 +148,31 @@
     "signal = torch.from_numpy(file)\n",
     "signal = (signal - signal.mean()) / signal.std()\n",
     "\n",
-    "\n",
     "# label\n",
     "label_time = np.zeros(2)\n",
     "\n",
     "label_time[0] = labels[nfile]\n",
-    "label_time[1] = int(times[nfile])"
+    "label_time[1] = times[nfile]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.      , 38.261326], dtype=float32)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_time.astype(np.float32)"
    ]
   },
   {
@@ -168,11 +207,13 @@
     "            file   = X[nfile, :, :]\n",
     "            signal = torch.from_numpy(file)\n",
     "            signal = (signal - signal.mean()) / signal.std()\n",
+    "            signal = signal.to(torch.float32)\n",
     "\n",
     "            # label\n",
     "            label_time = np.zeros(2)\n",
     "            label_time[0] = labels[nfile]\n",
-    "            label_time[1] = int(times[nfile])\n",
+    "            label_time[1] = times[nfile]\n",
+    "            label_time.astype(np.float32)\n",
     "\n",
     "            data      = {'iEEG': signal, 'label_time': label_time}\n",
     "            file_name = hosp_id + '_' + subject_id + '_' + PE_id + '_E' + str(nfile)\n",
