--- a/Paper_iESPnet_pruebas/01-Exploraciones/05.1 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01-Exploraciones/05.1 Exploracion.ipynb
@@ -203,7 +203,7 @@
     "            # normalize the waveform\n",
     "            signal = (signal - signal.mean()) / signal.std()\n",
     "\n",
-    "            spec, t, f = ue.get_spectrogram(signal, ECOG_SAMPLE_RATE, SPEC_NFFT, SPEC_WIN_LEN, SPEC_HOP_LEN)\n",
+    "            spec, t, f = ue.get_spectrogram_1(signal, ECOG_SAMPLE_RATE, SPEC_NFFT, SPEC_WIN_LEN, SPEC_HOP_LEN)\n",
     "\n",
     "            # spec to DB\n",
     "            spec = librosa.power_to_db(spec, top_db=top_db)\n",
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
