--- a/Paper_iESPnet_pruebas/01-Exploraciones/10 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01-Exploraciones/10 Exploracion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,11 @@
     "import os\n",
     "import torch\n",
     "\n",
-    "import pandas as pd\n",
+    "import torchaudio.transforms    as T\n",
+    "import pandas                   as pd\n",
+    "\n",
+    "from torchvision       import transforms\n",
+    "from torch.utils.data  import DataLoader\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join('..','..','iESPnet_SRC_main','utilities')))\n",
     "from Generator         import SeizureDatasetLabelTimev2, scale_spec, permute_spec, smoothing_label\n",
@@ -30,16 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7a38ace490f0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.manual_seed(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,10 +201,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform_train1 = transforms.Compose([\n",
+    "                                        T.FrequencyMasking(FREQ_MASK_PARAM),\n",
+    "                                        T.TimeMasking(TIME_MASK_PARAN), \n",
+    "                                        permute_spec()                                                                     \n",
+    "                                      ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data augmentation only in train data\n",
+    "\n",
+    "train_data_trf1 = SeizureDatasetLabelTimev2(\n",
+    "                                            file=train_df,\n",
+    "                                            root_dir=SPE_DIR,\n",
+    "                                            transform=transform_train1, \n",
+    "                                            target_transform=smoothing_label() \n",
+    "                                           )\n",
+    "\n",
+    "train_data = torch.utils.data.ConcatDataset([train_data_ori, train_data_trf1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing data should be balanced, just be \"as it is\"\n",
+    "\n",
+    "test_data = SeizureDatasetLabelTimev2(\n",
+    "                                      file=test_df,\n",
+    "                                      root_dir=SPE_DIR,\n",
+    "                                      transform=None,\n",
+    "                                      target_transform=smoothing_label()  \n",
+    "                                     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# se debe balancear train_df\n",
+    "weights = make_weights_for_balanced_classes(train_df, [0,1], n_concat=2)\n",
+    "sampler = torch.utils.data.sampler.WeightedRandomSampler(weights, len(weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputfile = save_models + 'model'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n"
+     ]
+    }
+   ],
+   "source": [
+    "use_cuda = torch.cuda.is_available()\n",
+    "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+    "print('Using {} device'.format(device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# following pytorch suggestion to speed up training\n",
+    "torch.backends.cudnn.benchmark = True\n",
+    "\n",
+    "\n",
+    "kwargs       = {'num_workers': hparams[\"num_workers\"], 'pin_memory': True} if use_cuda else {}\n",
+    "\n",
+    "train_loader = DataLoader(train_data, batch_size=hparams[\"batch_size\"], sampler=sampler, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''El dataloader es un iterador y se debe interpretar como tal, para acceder se debe utilizar o enumerate o next'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_train_losses, avg_train_f1 = train_model_opt(model, hparams, epochs, train_data, sampler, outputfile)"
+   ]
   }
  ],
  "metadata": {
