--- a/Paper_iESPnet_pruebas/01-Exploraciones/10 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01-Exploraciones/10 Exploracion.ipynb
@@ -92,17 +92,17 @@
    "outputs": [],
    "source": [
     "hparams = {\n",
-    "        \"n_cnn_layers\" : 3,\n",
-    "        \"n_rnn_layers\" : 3,\n",
-    "        \"rnn_dim\"      : [150, 100, 50],\n",
-    "        \"n_class\"      : N_CLASSES,\n",
-    "        \"out_ch\"       : [8,8,16],\n",
-    "        \"dropout\"      : 0.3,\n",
-    "        \"learning_rate\": learning_rate,\n",
-    "        \"batch_size\"   : batch_size,\n",
-    "        \"num_workers\"  : num_workers,\n",
-    "        \"epochs\"       : epochs\n",
-    "        }"
+    "           \"n_cnn_layers\" : 3,\n",
+    "           \"n_rnn_layers\" : 3,\n",
+    "           \"rnn_dim\"      : [150, 100, 50],\n",
+    "           \"n_class\"      : N_CLASSES,\n",
+    "           \"out_ch\"       : [8,8,16],\n",
+    "           \"dropout\"      : 0.3,\n",
+    "           \"learning_rate\": learning_rate,\n",
+    "           \"batch_size\"   : batch_size,\n",
+    "           \"num_workers\"  : num_workers,\n",
+    "           \"epochs\"       : epochs\n",
+    "          }"
    ]
   },
   {
@@ -200,12 +200,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "aca esta el cambio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform_train1 = transforms.Compose([\n",
+    "transform_train = transforms.Compose([\n",
     "                                        T.FrequencyMasking(FREQ_MASK_PARAM),\n",
     "                                        T.TimeMasking(TIME_MASK_PARAN), \n",
     "                                        permute_spec()                                                                     \n",
@@ -220,14 +227,25 @@
    "source": [
     "# data augmentation only in train data\n",
     "\n",
-    "train_data_trf1 = SeizureDatasetLabelTimev2(\n",
+    "'''\n",
+    "\n",
+    "train_data_trf = SeizureDatasetLabelTimev2(\n",
     "                                            file=train_df,\n",
     "                                            root_dir=SPE_DIR,\n",
     "                                            transform=transform_train1, \n",
     "                                            target_transform=smoothing_label() \n",
     "                                           )\n",
     "\n",
-    "train_data = torch.utils.data.ConcatDataset([train_data_ori, train_data_trf1])"
+    "train_data = torch.utils.data.ConcatDataset([train_data_ori, train_data_trf1])\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hasta aca"
    ]
   },
   {
@@ -296,7 +314,6 @@
     "\n",
     "\n",
     "kwargs       = {'num_workers': hparams[\"num_workers\"], 'pin_memory': True} if use_cuda else {}\n",
-    "\n",
     "train_loader = DataLoader(train_data, batch_size=hparams[\"batch_size\"], sampler=sampler, **kwargs)"
    ]
   },
