--- a/Paper_iESPnet_pruebas/02-Experimentos/01 Experimento.ipynb
+++ b/Paper_iESPnet_pruebas/02-Experimentos/01 Experimento.ipynb
@@ -65,20 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x78fc34d11b30>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -109,20 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# direccion donde se encuentran los espectrogramas \n",
-    "SPE_DIR        = '/media/martin/Disco2/Rns_Data/PITT_PI_EEG/'\n",
-    "meta_data_file = '/media/martin/Disco2/Rns_Data/PITT_PI_EEG/METADATA/allfiles_metadata.csv'\n",
+    "SPE_DIR        = '/media/martin/Disco2/Rns_Data/PITT_PI_EEG_PROCESS/'\n",
+    "meta_data_file = '/media/martin/Disco2/Rns_Data/PITT_PI_EEG_PROCESS/METADATA/allfiles_metadata.csv'\n",
     "\n",
     "df_meta        = pd.read_csv(meta_data_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,47 +254,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiments = ['exp1.1','exp1.2','exp1.3']"
+    "# experimentos que se van a realizar\n",
+    "experiments_1 = ['exp1','exp2','exp3']\n",
+    "experiments_2 = ['.1','.2','.3']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'exp1.1'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = experiments_1[0] + experiments_2[0]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n"
+      "0 0\n",
+      "0 1\n",
+      "0 2\n",
+      "1 0\n",
+      "1 1\n",
+      "1 2\n",
+      "2 0\n",
+      "2 1\n",
+      "2 2\n"
      ]
     }
    ],
    "source": [
-    "for s in range (len(experiments)):\n",
-    "    print(s) # va el resto"
+    "for s in range (len(experiments_1)):\n",
+    "    for j in range (len(experiments_2)):\n",
+    "        print(s,j)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ejemplo s = 0\n",
     "\n",
-    "s = 0"
+    "s = 0\n",
+    "j = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,14 +355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_runs        = save_path + experiments[s] + '/runs/'\n",
-    "save_models      = save_path + experiments[s] + '/models/'\n",
-    "save_predictions = save_path + experiments[s] + '/results/'\n",
-    "save_figs        = save_path + experiments[s] + '/figs/'\n",
+    "save_runs        = save_path + experiments_1[s] + '/' + str(experiments_1[s]) + str(experiments_2[j]) +'/runs/'\n",
+    "save_models      = save_path + experiments_1[s] + '/' + str(experiments_1[s]) + str(experiments_2[j]) + '/models/'\n",
+    "save_predictions = save_path + experiments_1[s] + '/' + str(experiments_1[s]) + str(experiments_2[j]) + '/results/'\n",
+    "save_figs        = save_path + experiments_1[s] + '/' + str(experiments_1[s]) + str(experiments_2[j]) + '/figs/'\n",
     "\n",
     "if not os.path.exists(save_path):\n",
     "    os.makedirs(save_path)\n",
@@ -362,19 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running training for: exp1.1\n"
+      "Running training for: exp1.3\n"
      ]
     }
    ],
    "source": [
-    "print('Running training for: ' + experiments[s])"
+    "print('Running training for: ' + experiments_1[s] +  experiments_2[j])"
    ]
   },
   {
@@ -386,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,22 +475,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'models_DSF_iESPnet/exp1.1/models/model_exp1.1'"
+       "'models_DSF_iESPnet/exp1/exp1.3/models/model_exp1.3'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "outputfile = save_models + 'model_' + str(experiments[s])"
+    "outputfile = save_models + 'model_' + str(experiments_1[s] + experiments_2[j])\n",
+    "outputfile"
    ]
   },
   {
@@ -489,18 +510,31 @@
     "                                                                            transform_train, \n",
     "                                                                            sampler, \n",
     "                                                                            outputfile,\n",
-    "                                                                            experiments[s]\n",
+    "                                                                            experiments_1[s],\n",
+    "                                                                            experiments_2[j]\n",
     "                                                                           )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'models_DSF_iESPnet/exp1/exp1.1/models/model_exp1.1.pth'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_thr = 0.2\n",
-    "best_path = outputfile + '.pth'"
+    "best_path = outputfile + '.pth'\n",
+    "best_path"
    ]
   },
   {
@@ -510,7 +544,7 @@
    "outputs": [],
    "source": [
     "# in validation\n",
-    "outputs_vali = test_model_v2(model1, model2, hparams, best_path, vali_data, experiments[s])\n",
+    "outputs_vali = test_model_v2(model1, model2, hparams, best_path, vali_data, experiments_1[s], experiments_1[j])\n",
     "prediction_va = get_performance_indices(outputs_vali['y_true'], outputs_vali['y_prob'], best_thr)"
    ]
   },
@@ -521,7 +555,7 @@
    "outputs": [],
    "source": [
     "# in testing\n",
-    "outputs_test  = test_model_v2(model1, model2, hparams, best_path, test_data, experiments[s])\n",
+    "outputs_test  = test_model_v2(model1, model2, hparams, best_path, test_data, experiments_1[s], experiments_1[j])\n",
     "prediction_te = get_performance_indices(outputs_test['y_true'], outputs_test['y_prob'], best_thr)"
    ]
   },
@@ -532,7 +566,7 @@
    "outputs": [],
    "source": [
     "# in training\n",
-    "outputs_train = test_model_v2(model1, model2, hparams, best_path, train_data, experiments[s])\n",
+    "outputs_train = test_model_v2(model1, model2, hparams, best_path, train_data, experiments_1[s], experiments_1[j])\n",
     "prediction_tr = get_performance_indices(outputs_train['y_true'], outputs_train['y_prob'], best_thr)"
    ]
   },
@@ -555,8 +589,36 @@
     "            \"train_size\"   : len(train_data)/len(df_meta) # verificar tamaño de train data\n",
     "            }\n",
     "\n",
-    "np.save(save_predictions + experiments[s] + '/results.npy', predict_)"
+    "np.save(save_predictions + 'results.npy', predict_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'models_DSF_iESPnet/exp1/exp1.1/results/results.npy'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = save_predictions + 'results.npy'\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
