--- a/Paper_iESPnet_pruebas/01-Exploraciones/10 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01-Exploraciones/10 Exploracion.ipynb
@@ -16,6 +16,7 @@
     "import sys\n",
     "import os\n",
     "import torch\n",
+    "import random\n",
     "\n",
     "import torchaudio.transforms    as T\n",
     "import torch.optim              as optim\n",
@@ -45,20 +46,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7fa6b00f50f0>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "torch.manual_seed(0)"
+    "torch.manual_seed(0)\n",
+    "random.seed(0)"
    ]
   },
   {
@@ -213,7 +204,6 @@
    "outputs": [],
    "source": [
     "# define train y test de df_meta\n",
-    "\n",
     "test_id  = ['PIT-RNS1090', 'PIT-RNS8973', 'PIT-RNS1438', 'PIT-RNS8326', 'PIT-RNS3016']\n",
     "vali_id  = ['PIT-RNS1603', 'PIT-RNS1556', 'PIT-RNS1534', 'PIT-RNS6989', 'PIT-RNS2543', 'PIT-RNS7168', 'PIT-RNS6762']\n",
     "\n",
@@ -235,21 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define train y test de df_meta\n",
     "\n",
-    "train_df = df_meta.copy()\n",
-    "test_df  = df_meta[df_meta['rns_id'] == patients[s]]\n",
-    "test_df.reset_index(drop=True, inplace=True)\n",
-    "train_df.drop(train_df[train_df['rns_id'] == patients[s]].index, inplace = True)"
+    "#train_df = df_meta.copy()\n",
+    "#test_df  = df_meta[df_meta['rns_id'] == patients[s]]\n",
+    "#test_df.reset_index(drop=True, inplace=True)\n",
+    "#train_df.drop(train_df[train_df['rns_id'] == patients[s]].index, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,12 +322,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Funcion train_model_opt"
+    "### Funcion train_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +416,7 @@
        ")"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +527,7 @@
        ")"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,14 +600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "scheduler2 = optim.lr_scheduler.OneCycleLR(\n",
     "                                            optimizer2, \n",
     "                                            max_lr          = hparams['learning_rate'], \n",
-    "                                            steps_per_epoch = int(len(train_loader)),\n",
+    "                                            steps_per_epoch = int(len(train_loader)*2),\n",
     "                                            epochs          = hparams['epochs'],\n",
     "                                            anneal_strategy = 'linear'\n",
     "                                            )"
@@ -625,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +633,7 @@
        "'\\n\\nfor epoch in range(1, epochs + 1):\\n    # agregar todos los argumentos necesarios\\n    train_losses, train_aucpr = training_DSF_iESPnet(model, device, train_loader, transform_train, criterion, optimizer, scheduler, epoch)\\n    \\n    train_loss = np.average(train_losses)\\n\\n    avg_train_losses.append(train_loss)\\n    \\n    avg_train_accs.append(train_aucpr)\\n    \\n'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +701,7 @@
        ")"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +810,7 @@
        ")"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +843,7 @@
        "torch.Size([64, 4, 22500])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +863,7 @@
        "torch.Size([64, 181])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +988,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectrograms = get_spectrogram_2(outputs1, ECOG_SAMPLE_RATE, SPEC_NFFT, SPEC_WIN_LEN, SPEC_HOP_LEN, top_db)"
+    "spectrograms = get_spectrogram_2(outputs1, device, ECOG_SAMPLE_RATE, SPEC_NFFT, SPEC_WIN_LEN, SPEC_HOP_LEN, top_db)"
    ]
   },
   {
@@ -1114,6 +1104,126 @@
    "outputs": [],
    "source": [
     "output2 = model2(spectrograms2train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.1099, -0.0395,  0.0183,  ...,  0.0153,  0.0469,  0.0724],\n",
+      "        [-0.0027, -0.0371, -0.0744,  ..., -0.1260,  0.0390,  0.0924],\n",
+      "        [-0.0994, -0.0254, -0.0289,  ...,  0.0385,  0.0819,  0.0515],\n",
+      "        ...,\n",
+      "        [ 0.0294, -0.0094,  0.0463,  ...,  0.1374,  0.1347,  0.0245],\n",
+      "        [-0.0965, -0.0677, -0.0587,  ...,  0.0739,  0.0403, -0.0923],\n",
+      "        [ 0.0469, -0.0489,  0.0610,  ...,  0.0577,  0.0063,  0.0589]],\n",
+      "       device='cuda:0', grad_fn=<SqueezeBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.1099, -0.0395,  0.0183,  ...,  0.0153,  0.0469,  0.0724],\n",
+      "        [-0.0027, -0.0370, -0.0744,  ..., -0.1260,  0.0390,  0.0924],\n",
+      "        [-0.0994, -0.0254, -0.0289,  ...,  0.0385,  0.0819,  0.0515],\n",
+      "        ...,\n",
+      "        [ 0.0294, -0.0094,  0.0463,  ...,  0.1374,  0.1348,  0.0245],\n",
+      "        [-0.0965, -0.0677, -0.0587,  ...,  0.0739,  0.0402, -0.0923],\n",
+      "        [ 0.0469, -0.0490,  0.0610,  ...,  0.0577,  0.0063,  0.0589]],\n",
+      "       device='cuda:0', grad_fn=<SqueezeBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.1099, -0.0395,  0.0183,  ...,  0.0153,  0.0469,  0.0724],\n",
+      "        [-0.0027, -0.0370, -0.0744,  ..., -0.1260,  0.0390,  0.0924],\n",
+      "        [-0.0994, -0.0254, -0.0289,  ...,  0.0385,  0.0819,  0.0515],\n",
+      "        ...,\n",
+      "        [ 0.0294, -0.0094,  0.0463,  ...,  0.1374,  0.1348,  0.0245],\n",
+      "        [-0.0965, -0.0677, -0.0587,  ...,  0.0739,  0.0402, -0.0923],\n",
+      "        [ 0.0469, -0.0490,  0.0610,  ...,  0.0577,  0.0063,  0.0589]],\n",
+      "       device='cuda:0', grad_fn=<SqueezeBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.1113, -0.0413,  0.0174,  ...,  0.0152,  0.0471,  0.0730],\n",
+      "        [-0.0021, -0.0403, -0.0761,  ..., -0.1255,  0.0396,  0.0952],\n",
+      "        [-0.1005, -0.0248, -0.0328,  ...,  0.0396,  0.0807,  0.0513],\n",
+      "        ...,\n",
+      "        [-0.0051,  0.0318,  0.0466,  ...,  0.1556,  0.0646,  0.0138],\n",
+      "        [-0.0704, -0.0246, -0.0104,  ...,  0.0708,  0.0525, -0.0752],\n",
+      "        [-0.0202, -0.0541,  0.0630,  ...,  0.0347,  0.0174,  0.0747]],\n",
+      "       device='cuda:0', grad_fn=<SqueezeBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.1115, -0.0391,  0.0190,  ...,  0.0158,  0.0464,  0.0720],\n",
+      "        [-0.0027, -0.0376, -0.0747,  ..., -0.1262,  0.0386,  0.0920],\n",
+      "        [-0.0989, -0.0249, -0.0284,  ...,  0.0381,  0.0815,  0.0512],\n",
+      "        ...,\n",
+      "        [ 0.0179, -0.0081,  0.0563,  ...,  0.1386,  0.1087,  0.0260],\n",
+      "        [-0.0865, -0.0651, -0.0632,  ...,  0.0591,  0.0473, -0.0879],\n",
+      "        [ 0.0429, -0.0499,  0.0635,  ...,  0.0664,  0.0109,  0.0686]],\n",
+      "       device='cuda:0', grad_fn=<SqueezeBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output2)"
    ]
   },
   {
