--- a/Paper_iESPnet_pruebas/02-Experimentos/02 Experimento.ipynb
+++ b/Paper_iESPnet_pruebas/02-Experimentos/02 Experimento.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "sys.path.append(os.path.abspath(os.path.join('..','..','iESPnet_SRC_main','utilities')))\n",
     "from Generator         import SeizureDatasetLabelTimev2, smoothing_label\n",
     "from Model             import iESPnet\n",
-    "from TrainEval         import test_model_dsf_iespnet_abl_perpatient, get_performance_indices\n",
+    "from TrainEval         import test_model_dsf_iespnet_abl, get_performance_indices\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join('../../..','03 Dynamic-Spatial-Filtering')))\n",
     "from models            import DynamicSpatialFilter"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,21 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path        = '/media/martin/Disco2/Rns_Data/experimentos/dsf_iespnet_noprocess/exp3/'\n",
-    "experiment       = 'exp3.2'\n",
+    "save_path        = '/media/martin/Disco2/Rns_Data/experimentos/exp1.6/'\n",
+    "experiment       = 'exp1.6'\n",
     "save_models      = save_path + experiment + '/models/'\n",
     "save_predictions = save_path + experiment + '/results/'\n",
-    "outputfile       = save_models + 'model_' + experiment\n",
-    "best_path        = outputfile + '.pth'"
+    "outputfile       = save_models + 'model_' + experiment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,19 +189,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "in training:  PIT-RNS9183\n"
+      "in training:  PIT-RNS9536\n"
      ]
     }
    ],
    "source": [
     "print('in training: ', patients_train[s] )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encontrando la epoca de min loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/media/martin/Disco2/Rns_Data/experimentos/exp1.6/results/results.npy'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultados = save_path + 'results/'+ 'results.npy'\n",
+    "resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_resultados = np.load(resultados,allow_pickle=True).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['train_losses', 'train_acupr', 'valid_losses', 'valid_acupr', 'prediction_tr_loss', 'prediction_va_loss', 'prediction_te_loss', 'prediction_tr_accs', 'prediction_va_accs', 'prediction_te_accs', 'hparams', 'min_loss', 'best_auc', 'threshold', 'outputs_vali_loss', 'outputs_vali_accs', 'train_size'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(load_resultados.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_loss = load_resultados.get('min_loss')\n",
+    "print(min_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_path = outputfile + '_' + str(min_loss) + '.pth'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/media/martin/Disco2/Rns_Data/experimentos/exp1.6/exp1.6/models/model_exp1.6_11.pth'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Continuación"
    ]
   },
   {
