--- a/Paper_iESPnet_pruebas/01-Exploraciones/07 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01-Exploraciones/07 Exploracion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR        = '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data'\n",
-    "OUTDATA_DIR     = '/media/martin/Disco2/Rns_Data/PITT_PI_EEG/'\n",
-    "OUTMETADATA_DIR = '/media/martin/Disco2/Rns_Data/PITT_PI_EEG/METADATA/'"
+    "OUTDATA_DIR     = '/media/martin/Disco2/Rns_Data/PITT_PI_DATA/'\n",
+    "OUTMETADATA_DIR = '/media/martin/Disco2/Rns_Data/PITT_PI_DATA/METADATA/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s      = 0\n",
-    "nepoch = 1\n",
-    "nfile  = 23"
+    "s      = 1\n",
+    "nepoch = 3\n",
+    "#nfile  = 23"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,34 +100,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'PIT-RNS8973'"
+       "['/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190319-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190423-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190507-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190625-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190708-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190709-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190903-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190903-2.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20191015-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20191104-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20200225-1.EDF',\n",
+       " '/media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20200721-1.EDF']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RNSIDS[23]"
+    "data_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PIT-RNS6989'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RNSIDS[s]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting EDF parameters from /media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS1603/PIT-RNS1603_PE20150909-1.EDF...\n",
+      "Extracting EDF parameters from /media/martin/Disco2/Rns_Data/RNS_ESPM_datatransfer/Data/PIT-RNS6989/PIT-RNS6989_PE20190625-1.EDF...\n",
       "EDF file detected\n",
       "Setting channel info structure...\n",
       "Creating raw.info structure...\n"
@@ -136,39 +167,85 @@
    ],
    "source": [
     "# signal\n",
-    "\n",
-    "events           = ue.get_events(annot_files[nepoch])\n",
-    "X, labels, times = ue.get_epochs_zeropad_all(data_files[nepoch], events)\n",
-    "\n",
-    "[nt, nc, ns] = np.shape(X)  \n",
-    "\n",
-    "hosp_id, subject_id, PE_id = ue.get_patient_PE(data_files[nepoch], RNSIDS[s])\n",
-    "\n",
-    "file   = X[nfile, :, :]\n",
-    "signal = torch.from_numpy(file)\n",
-    "signal = (signal - signal.mean()) / signal.std()\n",
-    "\n",
-    "# label\n",
-    "label_time = np.zeros(2)\n",
-    "\n",
-    "label_time[0] = labels[nfile]\n",
-    "label_time[1] = times[nfile]"
+    "events  = ue.get_events(annot_files[nepoch])\n",
+    "short_file, time2pad, num_stim_samples= ue.get_padded_and_estim_time(data_files[nepoch], events)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.      , 38.261326], dtype=float32)"
+       "5"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "short_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.196, 0.164, 0.076, 0.088, 0.10400000000000001]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time2pad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.9737024999999995)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_stim_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'label_time' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mlabel_time\u001b[49m\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat32)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'label_time' is not defined"
+     ]
     }
    ],
    "source": [
@@ -196,8 +273,8 @@
     "\n",
     "    for nepoch in range(len(data_files)):\n",
     "\n",
-    "        events           = ue.get_events(annot_files[nepoch])\n",
-    "        X, labels, times = ue.get_epochs_zeropad_all(data_files[nepoch], events)\n",
+    "        events                                         = ue.get_events(annot_files[nepoch])\n",
+    "        short_file, time2pad, num_stim_samples, n_stim = ue.get_padded_and_estim_time(data_files[nepoch], events)\n",
     "\n",
     "        [nt, nc, ns] = np.shape(X)        \n",
     "\n",
@@ -235,9 +312,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_thalamus",
+   "display_name": "Python (env_thalamus)",
    "language": "python",
-   "name": "python3"
+   "name": "env_thalamus"
   },
   "language_info": {
    "codemirror_mode": {
